# interact_pygui

./: README.md  pyproject.toml  setup.cfg
src/: main.py
src/prime_nums.egg-info/: PKG-INFO  SOURCES.txt
