[metadata]
name = prime_nums
version = 1.0.0
author = silaspdj
author_email = pdj@gmail.com
description = stop execution until key is pressed, press a hotkey how many times you want
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SilasPDJ/interact_pygui
project_urls =
    Bug Tracker = https://github.com/SilasPDJ/interact_pygui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src